--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,8 @@
                             <li><a href="api">Point d'entrée de l'API</a></li>
                         </ul>
                     </li>
-                </ul>
+                    <li><a href="AjaxChoixPays.html">TP</a></li>
+                </ul> 
             </li>
         </ul>
     </body>
